add graphql wrapping movie api

--- a/package.json
+++ b/package.json
@@ -5,5 +5,18 @@
   "main": "index.js",
   "repository": "https://github.com/likelionWonHo/movieQlApi",
   "author": "Wonho Kim",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "dependencies": {
+    "graphql-yoga": "^1.16.7",
+    "node-fetch": "^2.2.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.5",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.5"
+  }
 }
